syntax = "proto3";

package user.v1alpha;

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

service UserCRUDService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc CheckPassword(CheckPasswordRequest) returns (CheckPasswordResponse);
  rpc MakeAdmin(MakeAdminRequest) returns (MakeAdminResponse);
}

message GetRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message GetResponse {
  repeated User user = 1;
}

message AddRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}

message AddResponse {
  User user = 1;
}

message UpdateRequest {
  User user = 1;
}

message UpdateResponse {
  User user = 1;
}

message DeleteResponse {
  User user = 1;
}

message DeleteRequest {
  string id = 1;
}

message CheckPasswordRequest {
  string email = 1;
  string password = 2;
}

message CheckPasswordResponse {
  enum STATUS {
    OK = 0;
    WRONG_PASSWORD = 1;
    NOT_FOUND = 2;
    INTERNAL = 3;
  }
  STATUS status = 1;
  User user = 2;
}

message MakeAdminRequest {
  string id = 1;
  string email = 2;
}
message MakeAdminResponse {
  User user = 1;
}